--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -45,7 +45,7 @@ jobs:
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
-          role-to-assume: arn:aws:iam::814133038071:oidc-provider/token.actions.githubusercontent.com
+          role-to-assume: arn:aws:iam::814133038071:role/hello-cloudnexus-github-oidc-role
           aws-region: ap-south-1
 
       # 6️⃣ Upload static files to S3
